--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   "rules": {
     "arrow-body-style": [2, "as-needed"],
     "comma-dangle": 0,
+    "func-names": 0,
     "import/default": 0,
     "import/no-duplicates": 0,
     "import/named": 0,
