--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provide config to props easily and efficiently",
   "main": "index.js",
   "scripts": {
-    "build": "babel lib --out-dir dist",
+    "build": "webpack --config webpack.config.js",
     "lint": "eslint --fix lib",
     "test": "jest"
   },
@@ -32,6 +32,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.2",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -40,8 +41,11 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "prettier": "^1.14.2",
-    "regenerator-runtime": "^0.12.1"
+    "regenerator-runtime": "^0.12.1",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
   }
 }
