--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "react-configurable",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Provide config to props easily and efficiently",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "lint": "eslint --fix lib",
