--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
       "extensions": [".js", ".jsx"]
     }],
     "react/jsx-one-expression-per-line": [0],
+    "react/no-array-index-key": [0],
     "strict": 0
   }
 }
